--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <footer class="primary-footer container group">
 
       <small>&copy; Styles Conference</small>
-
+<!--footer header-->
       <nav class="nav">
         <ul>
           <li><a href="index.html">Home</a></li><!--
